--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,10 @@
 {
-  "recommendations": [
-    "streetsidesoftware.code-spell-checker",
-    "streetsidesoftware.code-spell-checker-russian"
-  ]
+	"recommendations": [
+		"streetsidesoftware.code-spell-checker",
+		"streetsidesoftware.code-spell-checker-russian",
+		"svipas.prettier-plus",
+		"itsjonq.outrunner",
+		"mightbesimon.emoji-icons",
+		"usernamehw.errorlens"
+	]
 }
