--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,57 +1,57 @@
 {
-	"editor.formatOnSave": true,
-	"[html]": {
-		"editor.defaultFormatter": "svipas.prettier-plus",
-	},
-	"[javascript]": {
-		"editor.defaultFormatter": "svipas.prettier-plus",
-	},
-	"[javascriptreact]": {
-		"editor.defaultFormatter": "svipas.prettier-plus",
-	},
-	"[typescript]": {
-		"editor.defaultFormatter": "svipas.prettier-plus",
-	},
-	"[typescriptreact]": {
-		"editor.defaultFormatter": "svipas.prettier-plus",
-	},
-	"[postcss]": {
-		"editor.defaultFormatter": "svipas.prettier-plus",
-	},
-	"editor.rulers": [
-		80,
-		100
-	],
-	"editor.semanticHighlighting.enabled": true,
-	"editor.tabSize": 2,
-	"errorLens.followCursor": "allLinesExceptActive",
-	"errorLens.messageBackgroundMode": "line",
-	"errorLens.scrollbarHackEnabled": true,
-	"errorLens.margin": "1%",
-	"errorLens.fontSize": "19px",
-	"errorLens.fontStyleItalic": true,
-	"errorLens.gutterIconSet": "borderless",
-	"errorLens.replaceLinebreaksSymbol": "\t",
-	"errorLens.statusBarMessageEnabled": true,
-	"errorLens.statusBarCommand": "goToProblem",
-	"errorLens.statusBarColorsEnabled": true,
-	"errorLens.statusBarMessageType": "activeLine",
-	"explorer.incrementalNaming": "smart",
-	"explorer.sortOrder": "filesFirst",
-	"files.eol": "\n",
-	"javascript.updateImportsOnFileMove.enabled": "always",
-	"javascript.preferences.quoteStyle": "double",
-	"path-intellisense.extensionOnImport": true,
-	"prettier.eslintIntegration": true,
-	"mergeEditor.diffAlgorithm": "experimental",
-	"workbench.colorTheme": "Outrunner",
-	"workbench.editor.pinnedTabSizing": "shrink",
-	"workbench.editor.highlightModifiedTabs": true,
-	"workbench.iconTheme": "emoji-file-icons",
-	"zenMode.hideTabs": false,
-	"cSpell.words": [
-		"deepzoom",
-		"Krang",
-		"latlng"
-	]
+  "editor.formatOnSave": true,
+  "[html]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "[postcss]": {
+    "editor.defaultFormatter": "svipas.prettier-plus"
+  },
+  "editor.rulers": [80, 100],
+  "editor.semanticHighlighting.enabled": true,
+  "editor.tabSize": 2,
+  "errorLens.followCursor": "allLinesExceptActive",
+  "errorLens.messageBackgroundMode": "line",
+  "errorLens.scrollbarHackEnabled": true,
+  "errorLens.margin": "1%",
+  "errorLens.fontSize": "19px",
+  "errorLens.fontStyleItalic": true,
+  "errorLens.gutterIconSet": "borderless",
+  "errorLens.replaceLinebreaksSymbol": "\t",
+  "errorLens.statusBarMessageEnabled": true,
+  "errorLens.statusBarCommand": "goToProblem",
+  "errorLens.statusBarColorsEnabled": true,
+  "errorLens.statusBarMessageType": "activeLine",
+  "explorer.incrementalNaming": "smart",
+  "explorer.sortOrder": "filesFirst",
+  "files.eol": "\n",
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "javascript.preferences.quoteStyle": "double",
+  "path-intellisense.extensionOnImport": true,
+  "prettier.eslintIntegration": true,
+  "mergeEditor.diffAlgorithm": "experimental",
+  "workbench.colorTheme": "Outrunner",
+  "workbench.editor.pinnedTabSizing": "shrink",
+  "workbench.editor.highlightModifiedTabs": true,
+  "workbench.iconTheme": "emoji-file-icons",
+  "zenMode.hideTabs": false,
+  "cSpell.words": ["deepzoom", "Krang", "latlng"],
+  "cSpell.language": "en,ru"
 }
